# automaton-auditor

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  rubric.json
reports/: interim_report.md
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
tests/: test_forensics.py
