[project]
name = "automaton-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langgraph",
    "langchain-openai",
    "pydantic",
    "python-dotenv",
    "langsmith",
    "typing-extensions",
    "pymupdf>=1.27.1",
    "docling>=2.75.0",
]
